--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/*style sheet*/
-
 *{
 	padding:0;
 	margin:0;
@@ -53,7 +51,6 @@
 .rbnav li:hover{
   background-color:#fff;
   color:#000;
-  
   border-radius:5px;
   transition:.5s;
   cursor:pointer;
@@ -107,23 +104,22 @@
   cursor:pointer;
 }
 
-.card:hover{
-  box-shadow:0 0 15px 2px #d0d0d0 , 0 5px 15px #d0d0d0;
-  transition:.2s linear;
-  transform:translate3d(2px,2px,2px);
+.card:hover .c-image img{
+transform: scale(1.1);
 }
 
 .c-image{
     width:250px;
     height:200px;
     margin:20px 0px; 
+    border-radius:5px;
+    overflow:hidden;
 }
 
 .c-image img{
   width:100%;
   height:100%;
-  border-radius:5px;
-  object-fit: cover;
+  transition:transform .5s ease-in-out;
 }
 
 .c-detail{
